--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://github.com/Nemanjavit/Card",
   "name": "card",
   "version": "1.0.0",
   "description": "",
@@ -9,7 +10,8 @@
   },
   "devDependencies": {},
   "scripts": {
-    "deploy":"gh-pages -d dist",
+    "deploy": "npm run gh-pages",
+    "gh-pages": "gh-pages -d dist -b gh-pages",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -20,6 +22,6 @@
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Nemanjavit/Card/issues"
-  },
-  "homepage": "https://github.com/Nemanjavit/Card"
+  }
+  
 }
